# forge

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build-docs.yml  build-release.yml  main.yml
core/: CMakeLists.txt  Defines.h  FCrossSection.cpp  FCrossSection.h  FDefaultMaterial.h  FGeometry.cpp  FGeometry.h  FLine.cpp  FLine.h  FMaterial.cpp  FMaterial.h  FModel.cpp  FModel.h  FModelExtruded.cpp  FModelExtruded.h  FModelLine.cpp  FModelLine.h  exceptions.h
core/dependencies/: csv.h  earcut.h  json.hpp
core/include/: Defines.h  FCrossSection.h  FDefaultMaterial.h  FModel.h  Resources.h
core/models/: CMakeLists.txt  FModel.cpp  FModel.h  FModelCylinder.h  FModelExtruded.cpp  FModelExtruded.h  FModelLine.cpp  FModelLine.h
core/source/: FCrossSection.cpp  FGeometry.cpp  FModel.cpp  Resources.cpp  main.cpp
core/symbols/: CMakeLists.txt  FCrossSection.cpp  FCrossSection.h  FLine.cpp  FLine.h  FSymbol.cpp  FSymbol.h
core/system/: BulkLoader.cpp  BulkLoader.h  CMakeLists.txt  Defines.h  Logger.cpp  Logger.h  Message.cpp  Message.h  Messages.cpp  Messages.h  Resources.cpp  Resources.h  exceptions.h
docs/html/: _bulk_loader_8cpp.html  _bulk_loader_8h.html  _bulk_loader_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _config_8h.html  _config_8h_source.html  _defines_8h.html  _defines_8h_source.html  _event_filters_8cpp.html  _event_filters_8h.html  _event_filters_8h_source.html  _f_camera_controller_8cpp.html  _f_camera_controller_8h.html  _f_camera_controller_8h_source.html  _f_cross_section_8cpp.html  _f_cross_section_8h.html  _f_cross_section_8h_source.html  _f_geometry_8cpp.html  _f_geometry_8h.html  _f_geometry_8h_source.html  _f_line_8cpp.html  _f_line_8h.html  _f_line_8h_source.html  _f_material_8cpp.html  _f_material_8h.html  _f_material_8h_source.html  _f_model_8cpp.html  _f_model_8h.html  _f_model_8h_source.html  _f_origin_8cpp.html  _f_origin_8h.html  _f_origin_8h_source.html  _f_symbol_8cpp.html  _f_symbol_8h.html  _f_symbol_8h_source.html  _f_widget_8h.html  _f_widget_8h_source.html  (+306 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+142 more)
docs/man/man3/: AutogenOldSettings.txt.3  BulkLoader.3  BulkLoader.cpp.3  BulkLoader.h.3  CMakeCCompilerId.c.3  CMakeCXXCompilerId.cpp.3  CMakeCache.txt.3  CMakeLists.txt.3  ClickEventFilter.3  CloseEventFilter.3  Config.3  Config.h.3  Defines.h.3  Derived_from.3  EventFilters.cpp.3  EventFilters.h.3  FCameraController.3  FCameraController.cpp.3  FCameraController.h.3  FCrossSection.3  FCrossSection.cpp.3  FCrossSection.h.3  FGeometry.3  FGeometry.cpp.3  FGeometry.h.3  FLine.3  FLine.cpp.3  FLine.h.3  FMaterial.3  FMaterial.cpp.3  FMaterial.h.3  FModel.3  FModel.cpp.3  FModel.h.3  FOrigin.3  FOrigin.cpp.3  FOrigin.h.3  FSymbol.3  FSymbol.cpp.3  FSymbol.h.3  (+156 more)
forge/: CMakeLists.txt  main.cpp
forge/source/: main.cpp
gui/: CMakeLists.txt
gui/components/: CMakeLists.txt  EventFilters.cpp  EventFilters.h  FCameraController.cpp  FCameraController.h  HasControls.cpp  HasControls.h  HasIdentifier.cpp  HasIdentifier.h  IdentifierList.h  IsControl.cpp  IsControl.h  MessageBus.h  Selection.cpp  Selection.hpp
gui/controls/: CMakeLists.txt  FOrigin.cpp  FOrigin.h  ForgeControl.cpp  ForgeControl.h  ForgeCreate.cpp  ForgeCreate.h  ForgeMainMenu.cpp  ForgeMainMenu.h  ForgeTitleBar.cpp  ForgeTitleBar.h  ForgeTransform.cpp  ForgeTransform.h  ForgeTransformMenu.cpp  ForgeTransformMenu.h
gui/include/: CommandBase.h  CommandCreate.h  CommandView.h  Config.h  Defines.h  FCrossSection.h  FDefaultMaterial.h  FGeometry.h  FModel.h  FWidget.h  ForgeApplication.h  ForgeControl.h  ForgeMenu.h  ForgePlace.h  ForgeRenderer.h  ForgeTitleBar.h  ForgeWindow.h  Geometry.h  MeshView.h
gui/source/: CommandBase.cpp  CommandView.cpp  FCrossSection.cpp  FGeometry.cpp  ForgeApplication.cpp  ForgeControl.cpp  ForgeMainMenu.cpp  ForgeMenu.cpp  ForgeWindow.cpp  Geometry.cpp  MeshView.cpp
gui/windows/: CMakeLists.txt  FWidget.h  ForgeApplication.cpp  ForgeApplication.h  ForgeControl.cpp  ForgeControl.h  ForgeMainMenu.cpp  ForgeTitleBar.h  ForgeWindow.cpp  ForgeWindow.h
reference/: CommandBase.h  ForgeMenu.h  ForgeRenderer.cpp
resources/: fragment_shader.glsl  geometry_shader.glsl  stylesheet.qss  vertex_shader.glsl
resources/data/: H_Test.json  basev0.1.json
resources/shaders/: line_frag.glsl
resources/themes/: stylesheet.qss
